--- a/src/Curba/GardeningBundle/Resources/views/Static/plant.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Static/plant.html.twig
@@ -8,7 +8,7 @@ Plants table
 <small>
 
 {% for plant in plants %}
-    <h2>{{ plant.ScientificName }}</h2>
+    <h2>{{ plant.Name }}</h2>
     <table class="plant">
       <body>
         <tr>
@@ -61,7 +61,6 @@ Plants table
       </body>
     </table>
 {% endfor %}
-   
 </small>
 {% endblock %}
 
