--- a/src/Curba/GardeningBundle/Resources/views/Default/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Default/index.html.twig
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block body_content %}
+
+<a class="grid_5" href="{{ path('default', {'_locale': locale, '_format': 'mhtml' }) }}">movile version</a>
+
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <div>
             <a class="grid_5" href="{{ path('main', {'_locale': locale }) }}">{% trans %}garden.gotomygarden{% endtrans %}</a>
