--- a/src/Curba/GardeningBundle/Resources/views/Static/plant.mhtml.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Static/plant.mhtml.twig
@@ -72,7 +72,7 @@
 
     <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="d">
         <li data-role="list-divider">Links</li>
-        <li><a href="{{ path('default', {'_format': 'mhtml'}) }}">Begining</a></li>
+        <li><a href="{{ path('default', {'_format': 'mhtml'}) }}">Home</a></li>
         <li><a href="{{ path('main', {'_format': 'mhtml'}) }}">My page</a></li>
         <li><a href="{{ path('profile', {'_format': 'mhtml'}) }}">My profile</a></li>
     </ul>
