--- a/src/Curba/GardeningBundle/Resources/views/layout_mobile.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/layout_mobile.html.twig
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Gardening mobile Alfa 2{% endblock %}</title>
+    {% stylesheets '@CurbaGardeningBundle/Resources/public/css/mobile/*' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
     <link rel="stylesheet"  href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
