--- a/src/Curba/GardeningBundle/Resources/views/Static/cropperiod.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Static/cropperiod.html.twig
@@ -1,7 +1,7 @@
 {% extends "CurbaGardeningBundle::layout.html.twig" %}
 
 {% block body_header %}
-Crop period table
+Crop period table for region of {{ region.name }}
 {% endblock %}
 
 {% block body_content %}
