--- a/web/css/b6536ad.css
+++ b/web/css/b6536ad.css
@@ -661,6 +661,16 @@ body {
   font: 14px/1.4 Arial, sans-serif;
 }
 
+h1 {
+  color: #177915;
+  font-size: 18px;
+}
+
+h2 {
+  color: #177915;
+  font-size: 18px;
+}
+
 .container_16 {
   margin-left: auto;
   margin-right: auto;
