working on unitsofmeasurement

--- a/src/Curba/GardeningBundle/Resources/views/Default/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Default/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body_content %}
 
-<a class="grid_5" href="{{ path('default', {'_locale': locale, '_format': 'mhtml' }) }}">movile version</a>
+<a class="grid_5" href="{{ path('default', {'_locale': locale, '_format': 'mhtml' }) }}">mobile version</a>
 
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <div>
