--- a/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
@@ -54,7 +54,7 @@
         <input type="submit" />
     </form>
     <br/>
-    <form action="{{ path('show_plant_family_info') }}" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('show_plant_family_info') }}" method="post" {{ form_enctype(formFamily) }}>
         {{ form_widget(formFamily) }}
         <input type="submit" />
     </form>
