Removed use of entity Action

--- a/src/Curba/GardeningBundle/Resources/views/Garden/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Garden/index.html.twig
@@ -32,7 +32,7 @@
                     <th></th>
                     <td></td>
                     <td></td>
-                    <td>{{ action.getCreatedAt()|date("Y-M-d H:i:s") }} {{ action.getActionType() }} {{ action.description }}: {{ action.value }} {{ action.valueUnit }}</td>
+                    <td>{{ action.getInstanceDate()|date("Y-M-d H:i:s") }} {{ action.getActionType() }} {{ action.description }}: {{ action.value }} {{ action.valueUnit }}</td>
                 </tr>
                 {% endfor %}
             {% endfor %}
